--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.22.7",
     "express": "^4.18.2",
     "pug": "^3.0.2",
+    "socket.io": "^4.7.1",
     "ws": "^8.13.0"
   }
 }
