--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.22.7",
+    "@socket.io/admin-ui": "^0.5.1",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.5.2",
     "pug": "^3.0.2",
     "socket.io": "^4.7.1",
     "ws": "^8.13.0"
